--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
       <!-- Section My Work -->
       <section id="my-work"  class="my-work">
-         <h2 class="section-title">My Work</h2>
+         <h2>My Work</h2>
+         
       </section>
 
       <!-- Section Contact me -->
