added my-work section content and style

--- a/index.html
+++ b/index.html
@@ -51,8 +51,28 @@
 
       <!-- Section My Work -->
       <section id="my-work"  class="my-work">
-         <h2>My Work</h2>
-         
+         <h2>My <span>Work</span></h2>
+         <div class="project-group">
+            <div class="project run-buddy">
+               <div class = "img">
+                  <!-- <img src="./assets/images/projectsImg/run-buddy.PNG" alt="a website with the title Run Buddy created by Anthony Dcosta"> -->
+               </div>
+               
+               <div class="link">
+                  <a href="ancosta993.github.io/run-buddy/">Visit Run Buddy</a>
+               </div>
+            </div>
+
+            <div class="project pass-gen">
+               <div class = "img">
+                  <!-- <img src="./assets/images/projectsImg/pass-generator.PNG" alt="a website with the title Password Generator created by Anthony Dcosta"> -->
+               </div>
+               <div class="link">
+                  <a href="#">Visit Password Generator</a>
+               </div>
+            </div>
+
+         </div>
       </section>
 
       <!-- Section Contact me -->
