added robot gladiator project and fixed the project links. Made the run buddy bigger

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                </div>
                
                <div class="link">
-                  <a href="ancosta993.github.io/run-buddy/">Visit Run Buddy</a>
+                  <a href="https://ancosta993.github.io/run-buddy/">Visit Run Buddy</a>
                </div>
             </div>
 
@@ -70,6 +70,16 @@
                <div class="link">
                   <a href="#">Visit Password Generator</a>
                </div>
+            </div>
+
+            <div class="project robot-gladiator">
+               <div class="img">
+
+               </div>
+               <div class="link">
+                  <a href="https://ancosta993.github.io/robot-gladiators/">Visit Robot Gladiator</a>
+               </div>
+
             </div>
 
          </div>
