added new structure to HTML

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <article class="my-text">
                <h2>About <span>Me</span> </h2>
                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ad omnis voluptatum id, expedita eligendi incidunt harum consequuntur eaque aperiam eos asperiores adipisci impedit at quo dolores delectus animi. Ratione cum error laudantium dolores, perferendis deleniti. Vero dolorum dignissimos,  dolorum animi, nulla, delectus nemo quasi quas rerum hic assumenda. <br><br>natus ea mollitia libero aperiam tempore expedita quaerat modi vel exercitationem odit at alias placeat ipsa! Consequatur eos et dicta perspiciatis ab maiores suscipit, assumenda magnam animi rerum dolorem, esse aperiam?
+                  Hi! I am Anthony Dcosta. I am a Community College Student majoring in Electrical Engineering. I am also training in a coding bootcamp by Michigan State Universty to become a web developer. I am passionate about designing website. I LOVE CSS and JavaScript. <br><br>I use them everyday and strive to build pixel perfect websites. I am result driven and take great pleasure in validation of my work. I am result driven and take great pleasure in validation of my work. 
                </p>
             </article>
          </article>
