--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
 
             </div>
 
+            <div class="project stream-searcher">
+               <div class="img">
+
+               </div>
+               <div class="link">
+                  <a href="https://github.com/Dcolli50/Stream-Searcher">Visit Stream Searcher</a>
+               </div>
+
+            </div>
+
+
          </div>
       </section>
 
