added basebal organizer in the project list

--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
 
             </div>
 
+            <div class="project baseball-organizer">
+               <div class="img">
+
+               </div>
+               <div class="link">
+                  <a href="https://github.com/pizzo1jr/Baseball-Organizer-">Visit Basebal Organizer</a>
+               </div>
+
+            </div>
+
 
          </div>
       </section>
